--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port = 8090
+server.error.whitelabel.enabled=true
 
+spring.datasource.url = jdbc:mysql://localhost:3306/db_api_productos?serverTimezone=UTC
+spring.datasource.username = root
+spring.datasource.password = 
+
+
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.naming.strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
