--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,14 @@
   <version>5.4.27.Final</version>
 </dependency>
 
+
+<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jpa</artifactId>
+    <version>2.6.1</version>
+</dependency>
+
 		
 	</dependencies>
 
