--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,5 +12,9 @@ spring.jpa.hibernate.naming.strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 
+spring.data.rest.page-param-name=page
+spring.data.rest.default-page-size = 5
+spring.data.rest.max-page-size = 20
+
 
 
