--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,10 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 
 spring.data.rest.page-param-name=page
-spring.data.rest.default-page-size = 5
-spring.data.rest.max-page-size = 20
+spring.data.rest.sort-param-name=sort
+spring.data.rest.limit-param-name=limit
+spring.data.rest.default-page-size = 1
+spring.data.rest.max-page-size = 10
 
 
 
