--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,24 @@
     <version>2.6.1</version>
 </dependency>
 
+
+
+<!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
+<dependency>
+    <groupId>com.auth0</groupId>
+    <artifactId>java-jwt</artifactId>
+    <version>3.18.2</version>
+</dependency>
+
+
+<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-core</artifactId>
+    <version>5.6.1</version>
+</dependency>
+
+
 		
 	</dependencies>
 
