--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,14 @@
     <version>5.6.1</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-security</artifactId>
+    <version>2.6.2</version>
+</dependency>
+
+
 
 		
 	</dependencies>
